--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <!-- CSSファイルの読み込み -->
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
     <link rel="stylesheet" href="style.css" />
     <title>HTML・CSS課題問題</title>
   </head>
   <body>
     <header>
-      
+
     </header>
     <main>
       <div class="step-box">
@@ -31,7 +32,7 @@
       </div>
     </main>
     <footer>
-      
+
     </footer>
   </body>
 </html>
